[tool.poetry]
name = "mac_computer_use"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.41.0"
anthropic = {extras = ["bedrock", "vertex"], version = "^0.42.0"}
jsonschema = "4.22.0"
keyboard = "^0.13.5"
boto3 = "^1.28.57"
google-auth = ">=2.0.0,<3.0.0"
python-dotenv = "^1.0.1"
pyautogui = "^0.9.54"
watchdog = "^5.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 